
# $Id$

EXTRA_DIST= classes.png crossplat.png daemonback.png elektra-after.png elektra-before.png genericarch.png img_arrow.png important.gif kdbedit-export.png kdbedit-fstab.png kdbedit-hw.png kdbedit-init.png kdb-edit.png kdbedit-prop1.png kdbedit-prop2.png kdbedit-signature.png kdbedit-users.png link_button_1.gif localbacks.png note.gif roots.png type-binary.png type-extendedbinary.png type-extendedstring.png type-folder.png type-link.png type-string.png xfree.png
