install (
	PROGRAMS writeConfigFiles
	DESTINATION "${TARGET_TOOL_EXEC_FOLDER}/ffconfig/"
	COMPONENT elektra-bin-extra)
install (
	PROGRAMS setupConfig
	DESTINATION "${TARGET_TOOL_EXEC_FOLDER}/ffconfig/"
	COMPONENT elektra-bin-extra)
install (
	PROGRAMS setupProxy
	DESTINATION "${TARGET_TOOL_EXEC_FOLDER}/ffconfig/"
	COMPONENT elektra-bin-extra)
install (
	PROGRAMS setupHomepage
	DESTINATION "${TARGET_TOOL_EXEC_FOLDER}/ffconfig/"
	COMPONENT elektra-bin-extra)
