foreach (backend ${BACKENDS})
	message("-- Include Backend ${backend}")
	add_subdirectory ("${backend}")
endforeach(backend)

list (FIND BACKENDS ${BACKEND_DEFAULT} output)
if (output GREATER -1)
	create_symlink (${BACKEND_DEFAULT} default)
else (output GREATER -1)
	message (SEND_ERROR "default backend ${BACKEND_DEFAULT} is not included")
endif (output GREATER -1)
